--- a/Validation/Validation.csproj
+++ b/Validation/Validation.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.0.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Fields\" />
+  </ItemGroup>
 </Project>
